kubernetes/flask-app-ds.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 1
  selector: #knows which pods to forward the request to
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: chamoo334/p2official
        imagePullPolicy: Always
        ports: #port container will expose
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: flask-app
