kubernetes/flask-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  type: ClusterIP # TODO:ClusterIP vs LoadBalancer
  selector:
    app: flask-app #find pods with this label
  ports:
    - protocol: "TCP"
      port: 6000
      targetPort: 5000
